crates/nash-solve/tests/snapshots/inference__inferred_context_is_instantiated_independently_at_each_local_use.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Literal exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntrait FromInt 'a where\n    fromInt : int -> 'a\ntrait FromString 'a where\n    fromString : string -> 'a\ntrait FromBytes 'a where\n    fromBytes : bytes -> 'a\nimpl FromInt int where\n    fromInt x = x\nimpl FromString string where\n    fromString x = x\nimpl FromBytes bytes where\n    fromBytes x = x\n\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep () where\n    keep x = x\ntype Color = Red\nimpl Keep Color where\n    keep x = x\nforward x = keep x\npair = (forward (), forward Red)\n"
---
forward : forall a. Keep a => a -> a
pair : ( unit, Color )
