crates/nash-solve/tests/snapshots/inference__inferred_context_preserves_constructed_arguments_and_recursive_groups.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntrait Observe 'a where\n    observe : 'a -> ()\nimpl Observe 'a => Observe (list 'a) where\n    observe xs = ()\ntrait Keep 'a where\n    keep : 'a -> 'a\nobserveList x = observe [x]\nfirst x = keep (second x)\nsecond x = first x\n"
---
first : forall a b. Keep a => b -> a
observeList : forall a. (Observe (list a), Storable a) => a -> unit
second : forall a b. Keep a => b -> a
