crates/nash-solve/tests/snapshots/inference__inferred_context_removes_duplicates_and_superclass_requirements.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Base 'a where\n    base : 'a -> 'a\ntrait Base 'a => Strong 'a where\n    strong : 'a -> 'a\ntrait Strong 'a => Top 'a where\n    top : 'a -> 'a\ntrait Base 'b => Select 'a 'b where\n    select : 'a -> 'b -> 'b\nreduced x = (base x, top x, strong (base x))\nreversed x = (top x, strong x, base x)\ndistinct x y = (base x, top y, base x)\npermuted x y = (base x, select x y, base y)\n"
---
distinct : forall a a1. (Base a, Top a1) => a -> a1 -> ( a, a1, a )
permuted : forall a a1. (Base a1, Select a1 a) => a1 -> a -> ( a1, a, a )
reduced : forall a. Top a => a -> ( a, a, a )
reversed : forall a. Top a => a -> ( a, a, a )
