crates/nash-solve/tests/snapshots/inference__inferred_value_rejects_a_hidden_trait_variable.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\nvalue = discard (create ())\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `value`.
   ╭─[Main.nash:5:1]
 4 │     discard : 'a -> ()
 5 │ value = discard (create ())
   · ─────
   ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.
