crates/nash-solve/tests/snapshots/inference__inferred_wrapper_preserves_the_callees_representation_requirement.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype option 'a = None | Some 'a\nfirst : 'a -> list 'a -> 'a\nfirst x xs = x\nwrapper x xs = first x xs\nbad xs = wrapper (Some ()) xs\n"
info: diagnostic
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Storable (option Primitive.unit)`.
   ╭─[Main.nash:8:10]
 7 │ wrapper x xs = first x xs
 8 │ bad xs = wrapper (Some ()) xs
   ·          ───┬───
   ·             ╰── required by `type application`
   ╰────
  help: Requirement chain:

            forming Primitive.list (option Primitive.unit)

        Use a type with Big or Const representation; an impl cannot change representation.


nash::type::missing_impl

  × Unsatisfied representation constraint `Storable (option Primitive.unit)`.
   ╭─[Main.nash:8:10]
 7 │ wrapper x xs = first x xs
 8 │ bad xs = wrapper (Some ()) xs
   ·          ───┬───
   ·             ╰── required by `wrapper`
   ╰────
  help: Use a type with Big or Const representation; an impl cannot change representation.
