crates/nash-solve/tests/snapshots/inference__infinite_type.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (selfApply)\n\nselfApply f = f f\n"
info: diagnostic
---
nash::type::infinite_type

  × `f` has a self-referential type: ∞ -> 'a
   ╭─[Main.nash:3:11]
 2 │ 
 3 │ selfApply f = f f
   ·           ─
   ╰────
  help: Break the type cycle; ∞ marks a repeated part of the type.
