crates/nash-solve/tests/snapshots/inference__inline_representation_predicate_rejects_const_at_a_big_use.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : ('a : Big) -> 'a\nidentity x = x\nrejected = identity ()\n"
info: diagnostic
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Primitive.Big unit`.
   ╭─[Main.nash:4:12]
 3 │ identity x = x
 4 │ rejected = identity ()
   ·            ────┬───
   ·                ╰── required by `identity`
   ╰────
  help: Use a type with Big representation; an impl cannot change representation.
